--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "lucide-react": "^0.559.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-to-print": "^3.2.0",
         "recharts": "^3.5.1",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.0.0",
